# post-call-processor

./: .dockerignore  .gitignore  CLAUDE.md  DESIGN.md  PRODUCT.md  docker-compose.yml
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.worker
docs/: architecture.md
docs/features/: 00-scaffolding.md  01-transcript-upload.md  _TEMPLATE.md
src/backend/: pyproject.toml
src/backend/app/: config.py  main.py
src/backend/app/api/: transcripts.py
src/backend/app/tasks/: ollama_client.py
src/backend/tests/: test_transcripts.py
src/frontend/: .env.example  package.json  pnpm-lock.yaml
src/frontend/src/components/: UploadForm.css  UploadForm.tsx
src/frontend/src/pages/: index.astro
src/frontend/src/styles/: tokens.css
