[project]
name = "post-call-processor-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "fastapi[standard]>=0.139.2",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
]
